# kwami-lk

./: README.md
agent/: pyproject.toml
agent/src/: agent.py  config.py  main.py  runtime_bootstrap.py
agent/src/browser/: browser_session.py
agent/src/handlers/: __init__.py  config_handler.py
agent/src/tools/: builtin.py  client.py
agent/src/utils/: validation.py
